crates/kul-core/tests/corpus/valid/05-nuclear-family/05-nuclear-family.kul
person alice name:"Alice Sharma" gender:female
person bob   name:"Bob Sharma"   gender:male
person carol name:"Carol Sharma" gender:female
  birth m_alice_bob

marriage m_alice_bob alice bob start:1972-05-12
